--- a/Accessing MongoDB with C# Part 2.html
+++ b/Accessing MongoDB with C# Part 2.html
@@ -5,6 +5,7 @@
     - Problem: there are no forecasts in the database
     - Solution: add a new page to the app that displays a form for users to add a new forecast
     - Add page to front end
+    - JavaScript that calls POST and limits GET output to 5 forecasts
     - Add POST endpoint to API
     - Add CreateForecast method to MongoDBAccessor
     - Run the app
