Partly finished part 2 of MongoDB article

--- a/Accessing MongoDB with C# Part 1.html
+++ b/Accessing MongoDB with C# Part 1.html
@@ -171,7 +171,7 @@ namespace WebAPIDemoForArticle
 }
 </code>
     
-<h2>Running MongoDB Queries with C#</h2>
+<h2>Running MongoDB Queries With C#</h2>
 <p>
     Finally, we can update the API controller to use the MongoDBAccessor class to query forecasts 
     from the database instead of making them up on the fly. We'll need to add a dependency to the 
