First draft of MongoDB part 2

--- a/JWTs explained.html
+++ b/JWTs explained.html
@@ -1,3 +1,9 @@
 <!-- TODO -->
 
+<!-- 
+    - What JWTs (JSON Web Tokens) are, and why do we need them?
+    - The encryption and signing of JWTs
+    - Adding JWTs to a C# project (add to API and secure create endpoint?)
+ -->
+
 <!-- Tags: JavaScript -->
