--- a/Accessing MongoDB with C# Part 2.html
+++ b/Accessing MongoDB with C# Part 2.html
@@ -1,20 +1,12 @@
-<h1>Accessing MongoDB With C# Part 2: Inserting Data</h1>
+<h1>Accessing MongoDB With C# Part 2: Inserting Data From the Front-End</h1>
 
 <h2>Updating the App to Let Users Add Weather Forecasts to The System</h2>
-<p style="display: hidden;">
-    - Problem: there are no forecasts in the database
-    - Solution: add a new page to the app that displays a form for users to add a new forecast
-    - Add page to front end
-    - JavaScript that calls POST and limits GET output to 5 forecasts
-    - Add POST endpoint to API
-    - Add CreateForecast method to MongoDBAccessor
-    - Run the app
-</p>
-
 <p>
-    In <a href="">part one of this article</a> we added MongoDB to the C# web API we made in 
-    <a href="">this article</a>, but because the database is empty, we can't see any forecasts in the app. 
-    In this article, we'll add the ability to create new forecasts to the app. We can start by adding a 
+    In <a href="https://andreblog.azurewebsites.net/article.html?8" target="_blank">part one of this article</a> 
+    we added MongoDB to the C# web API we made in 
+    <a href="https://andreblog.azurewebsites.net/article.html?7" target="_blank">this article</a>, 
+    but because the database is empty, we can't see any forecasts in the app. 
+    In this article, we'll add the ability to create new forecasts to the website. We can start by adding a 
     create.html page with the following code to the wwwroot folder:
 </p>
 <code>&lt;!DOCTYPE html&gt;
@@ -24,21 +16,21 @@
     &lt;meta name="viewport" content="width=device-width, initial-scale=1.0" /&gt;
     &lt;title&gt;Record New Weather Forecast&lt;/title&gt;
     &lt;link rel="stylesheet" href="css/site.css"&gt;
-    &lt;script&gt; src="js/site.js" defer&gt;&lt;/script&gt;
+    &lt;script src="js/site.js" defer&gt;&lt;/script&gt;
 &lt;/head&gt;
 &lt;body&gt;
     &lt;main class="main"&gt;
-        &lt;h1&gt; class="title"&gt;Record a New Weather Forecast&lt;/h1&gt;
+        &lt;h1 class="title"&gt;Record a New Weather Forecast&lt;/h1&gt;
         &lt;form id="createForcastForm" class="form" action="javascript:void(0)" onsubmit="createForecast().then()"&gt;
-            &lt;label&gt;  class="label" for="temperatureC"&gt;The Predicted Temperature in °C&lt;/label&gt;
+            &lt;label class="label" for="temperatureC"&gt;The Predicted Temperature in °C&lt;/label&gt;
             &lt;input id="temperatureC" class="input" type="number" value="20"&gt;
-            &lt;label&gt;  class="label" for="date"&gt;Date and Time of Occurrence&lt;/label&gt;
+            &lt;label class="label" for="date"&gt;Date and Time of Occurrence&lt;/label&gt;
             &lt;input id="date" class="input" type="datetime-local"&gt;
-            &lt;label&gt;  class="label" for="summary"&gt;Summary&lt;/label&gt;
+            &lt;label class="label" for="summary"&gt;Summary&lt;/label&gt;
             &lt;input id="summary" class="input" type="text"&gt;
             &lt;input type="submit" class="input" value="Create"&gt;
         &lt;/form&gt;
-        &lt;a&gt; href="index.html"&gt;Back to home&lt;/a&gt;
+        &lt;a href="index.html"&gt;Back to home&lt;/a&gt;
     &lt;/main&gt;
 &lt;/body&gt;
 &lt;/html&gt;
@@ -122,7 +114,7 @@
 
 <h2>Adding a POST endpoint to the API and calling it with JavaScript</h2>
 <p>If you run the app now, you'll be able to navigate to the Record New Weather Forecast page, but the 
-    form of course won;t work because we need to add some JavaScript to send the form data to the API 
+    form of course won't work because we need to add some JavaScript to send the form data to the API 
     to be added to the database. We'll add the following JavaScript to the beginning of wwwroot/js/site.js:
 </p>
 <code>async function createForecast() {
@@ -150,7 +142,7 @@
 
 </code>
 <p style="margin-bottom: 1px;">
-    createForecast scrapes the form data and packages it in the body of a fetch POST call. If response 
+    createForecast() scrapes the form data and packages it in the body of a fetch POST call. If response 
     is successful, the page is refreshed to show the new forecast. If there is an error, an alert informs 
     the user.
 </p>
@@ -158,36 +150,62 @@
     We can add the API endpoint createForecast calls to WeatherForecastController.cs, after the 
     Get() method:
 </p>
-<code>        [HttpPost]
-        public IActionResult Post(WeatherForecast forecast)
+<code>    [HttpPost]
+    public IActionResult Post(WeatherForecast forecast)
+    {
+        if (forecast is null ||
+            string.IsNullOrWhiteSpace(forecast.Summary))
         {
-            if (forecast is null ||
-                string.IsNullOrWhiteSpace(forecast.Summary))
-            {
-                return StatusCode(StatusCodes.Status422UnprocessableEntity);
-            }
-            _accessor.CreateForecast(forecast);
-            return StatusCode(StatusCodes.Status201Created);
+            return StatusCode(StatusCodes.Status422UnprocessableEntity);
         }
+        _accessor.CreateForecast(forecast);
+        return StatusCode(StatusCodes.Status201Created);
+    }
 </code>
 <p>
     After ensuring that the forecast is valid, the forecast is added to the database. If the forecast 
-    is invalid, the API responds with an error. Status code error 422 means that the form data from 
-    the client machine couldn't be processed. 
+    is invalid, the API responds with an error. Status code 422 means that the client machine made an 
+    error in the data it sent such that the data couldn't be processed by the server. 
 </p>
 
 <h2>Adding Data to the MongoDB Database</h2>
-<p></p>
+<p>
+    After adding the Post() method to WeatherForecastController, the C# compiler will throw an error 
+    because the MongoDBAccessor class doesn't have a CreateForecast() method. We can add the following 
+    method to the MongoDBAccessor class to fix the problem:
+</p>
+<code>    /// &lt;summary&gt;
+    /// Runs a query to insert a new weather forecast into the Weather Forecasts collection, 
+    /// using MongoDB's InsertOne() method.
+    /// &lt;/summary&gt;
+    public void CreateForecast(WeatherForecast forecast)
+    {
+        _database.GetCollection&lt;WeatherForecast&gt;(_forecastCollection)
+            .InsertOne(forecast);
+    }
+</code>
 
 <h2>Using the Finished, Working App</h2>
-<p></p>
-
-<!-- TODO: Add picture of C# project -->
+<p>
+    Now that we have added the full stack of code for the create forecast feature, we can run the 
+    app, fill in the form with some data, and after submitting you'll be redirected to the home page 
+    where you'll see the new forecast appear in the list of forecasts.
+</p>
+<p style="font-size: 1.125rem;">The Record New Weather Forecast page:</p>
+<img href="https://andreblog.azurewebsites.net/images/RecordForecastPage.png" alt="Record New Weather Forecast page" 
+     style="width: 100%;"/>
+<p>
+    If you wanted to add update or delete features, you'd just use the same process but 
+    with PUT and DELETE HTTP verbs for the API and the MongoDB UpdateOne() (or ReplaceOne()) 
+    and DeleteOne() method in the data access class, respectively. MongoDB also offers InsertMany(), 
+    UpdateMany(), and DeleteMany() methods for bulk operations, and all of these have asynchronous 
+    versions available from the MongoDB.Driver package (ex. InsertOneAsync()).
+</p>
 
 <p style="margin-top: 2rem; font-size: 1.0625rem;">
-    In this article, you've learned the advantages and drawbacks of using MongoDB for your 
-    data storage needs, and how to implement MongoDB in a C# application. For your next project, 
-    perhaps your new knowledge will help make your software run at peak performance!
+    In this two-part article, you've learned the advantages and drawbacks of using MongoDB for your 
+    data storage needs, and how to create a full-stack C# web app with MongoDB. 
+    See if your new knowledge can help you create more innovative and awesome software!
 </p>
 
 <!-- Tags: C#,MongoDB,CSS,JavaScript,HTTP -->
