--- a/Hashing and salting with C#.html
+++ b/Hashing and salting with C#.html
@@ -1,5 +1,3 @@
-<!-- TODO: Finish this -->
-
 <h1>Hashing and Salting in C#</h1>
 
 <h2>What is Hashing? What is Salting?</h2>
@@ -7,13 +5,13 @@
     Hashing, in general, is a method of computing a unique value for a given piece of data. 
     Hashing is often used to convert a string of characters into a number. In cryptography, 
     hashing is used to encrypt data, like a password, so that it cannot be decrypted. Instead, 
-    when a user enters a password, it is hashed and compared with the password hash stored in the database.
-
+    when a user enters a password, it is hashed and compared with the password hash stored in the database. 
+    If the hashes match, the user can log in.
 </p>
 <p style="margin-bottom: 1px;">
     Salting is a way to add a random string to the end of a password before the password is hashed. 
     Not only does this make it harder to guess the password if attackers gain access to the hash, but 
-    because each user gets a different salt multiple users can have the same password, but each resulting 
+    because each salt is different multiple users can have the same password while each resulting 
     hash is unique. 
 </p>
 <p>
@@ -22,16 +20,13 @@
 
 <h2>PBKDF2 in C#</h2>
 <p>
-    <!-- TODO: Verify that all paragraphs are accurate -->
-    PBKDF2 is a key derivation function that is used to derive keys ('key' is synonymous with 'hash' 
-    in this case) from passwords, and is the algorithm recommended by 
+    PBKDF2 is a key derivation function recommended by 
     <a href="https://docs.microsoft.com/en-us/aspnet/core/security/data-protection/consumer-apis/password-hashing" 
-    target="_blank">the C# docs</a>. It works by 
-    iterating a hash function over a password and a salt. The iteration count is the number of times 
+    target="_blank">the Microsoft C# docs</a>. It works by 
+    iterating a hash function (like SHA-512) over a password and a salt. The iteration count is the number of times 
     the hash function is applied to the password and salt. Here is an example of how to use PBKDF2 in C#:
 </p>
 <code>using Microsoft.AspNetCore.Cryptography.KeyDerivation;
-using System;
 using System.Security.Cryptography;
 
 string password = "password123";
@@ -67,25 +62,28 @@ byte[] hash = KeyDerivation.Pbkdf2(
     Argon2id, which uses the previous two together. Here is an example of how to use Argon2 in C# 
     to create a hash:
 </p>
-<code>
-using System;
+<code>using Konscious.Security.Cryptography;
 using System.Security.Cryptography;
-using Konscious.Security.Cryptography;
+using System.Text;
 
 string password = "password123";
+
 // Create a cryptographically strong salt
 byte[] salt = new byte[32];
 using (RNGCryptoServiceProvider rng = new RNGCryptoServiceProvider())
 {
     rng.GetBytes(salt);
 }
-using (var argon2id = new Argon2id(password)) {
+
+byte[] hash = new byte[32];
+using (var argon2id = new Argon2id(Encoding.UTF8.GetBytes(password)))
+{
     argon2id.Salt = salt;
     argon2id.Iterations = 10;
     argon2id.MemorySize = 65536; // 2^16KiB = 64MiB
     argon2id.DegreeOfParallelism = 8;
 
-    byte[] hash = argon2id.GetBytes(32);
+    hash = argon2id.GetBytes(32);
 }
 </code>
 <p>
@@ -95,9 +93,11 @@ using (var argon2id = new Argon2id(password)) {
 
 <p style="margin-top: -1rem; font-size: 1.0625rem;">
     In this article you've learned what hashing and salting is and how to perform these operations 
-    on passwords in C#. For more information on hashing and salting in C#, please see the Microsoft 
-    documentation on <a href="https://docs.microsoft.com/en-us/aspnet/core/security/data-protection/consumer-apis/password-hashing" 
-    target="_blank">hashing and salting in C#</a>.
+    on passwords in C#. For more information on hashing and salting in C#, please see the documentation on 
+    <a href="https://docs.microsoft.com/en-us/aspnet/core/security/data-protection/consumer-apis/password-hashing" 
+    target="_blank">hashing and salting with PBKDF2</a> and the 
+    <a href="https://github.com/kmaragon/Konscious.Security.Cryptography">
+        Konscious.Security.Cryptography library</a>. 
 </p>
 
 <!-- Tags: C#,Cyber security -->
