Posted hashing and salting article

--- a/Hashing and salting with C#.html
+++ b/Hashing and salting with C#.html
@@ -91,8 +91,8 @@ using (var argon2id = new Argon2id(Encoding.UTF8.GetBytes(password)))
     that grows even bigger on a regular basis.
 </p>
 
-<p style="margin-top: -1rem; font-size: 1.0625rem;">
-    In this article you've learned what hashing and salting is and how to perform these operations 
+<p style="margin-top: 1rem; font-size: 1.0625rem;">
+    In this article you've learned what hashing and salting are and how to perform these operations 
     on passwords in C#. For more information on hashing and salting in C#, please see the documentation on 
     <a href="https://docs.microsoft.com/en-us/aspnet/core/security/data-protection/consumer-apis/password-hashing" 
     target="_blank">hashing and salting with PBKDF2</a> and the 
